<project>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>sirius.stellar</groupId>
        <artifactId>stellar</artifactId>
        <version>1.0-RC1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <packaging>jar</packaging>
    <artifactId>stellar-configuration-testing</artifactId>
    <name>Stellar :: Configuration :: Testing</name>
	<description>Test suite for the configuration system, and shared testing facility for extensions.</description>

	<properties>
		<java.version.main>11</java.version.main>
		<java.version.test>17</java.version.test>
	</properties>

    <dependencies>
		<dependency>
			<groupId>sirius.stellar</groupId>
			<artifactId>stellar-configuration</artifactId>
		</dependency>

		<dependency>
			<groupId>sirius.stellar</groupId>
			<artifactId>stellar-lifecycle-testing</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>

				<executions>
					<execution>
						<id>test-compile-java23</id>

						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>

						<configuration>
							<release>23</release>

							<compileSourceRoots>
								<compileSourceRoot>${project.basedir}/src/test/java23</compileSourceRoot>
							</compileSourceRoots>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>

				<configuration>
					<argLine>--add-opens java.base/java.util=sirius.stellar.configuration</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
			</plugin>
        </plugins>
    </build>
</project>